--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg" href="assets/images/Campa-logo.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Daily Task-Earning Website</title>
+    <title>campaenergy</title>
   </head>
   <body>
     <div id="root"></div>
